them statistic service, thay response class thanh interface